fixed alignments

--- a/pnp-samples-gallery/src/components/FacePile/Facepile.module.css
+++ b/pnp-samples-gallery/src/components/FacePile/Facepile.module.css
@@ -1,6 +1,8 @@
 .root {
-    display: inline-flex;
+    display: flex;
     align-items: center;
+    justify-content: flex-start;
+    width: 100%;
     --pnp-face-size: 28px;
 }
 
